AMBARI-13223. AMS Collector does not start (dlysnichenko)